@@ -31,12 +31,17 @@
 #include "paths.h"
 
 bool global_exiting=false;
+bool global_reload=false;
 void SigHandler(int signo)
 {
   switch(signo) {
   case SIGINT:
   case SIGTERM:
     global_exiting=true;
+    break;
+
+  case SIGHUP:
+    global_reload=true;
     break;
   }
 }
@@ -96,34 +101,48 @@ MainObject::MainObject(QObject *parent)
     fprintf(stderr,"glassplayerhost: unable to bind port 80\n");
     exit(256);
   }
-  host_server->addCgiSource("/",GLASSPLAYERHOST_CGI_DIR+"/glassplayerhost.cgi");
+  host_server->loadUsers(GLASSPLAYERHOST_USER_FILE);
+  host_server->addCgiSource("/",GLASSPLAYERHOST_CGI_DIR+"/glassplayerhost.cgi",
+			    "GlassPlayer");
   host_server->addCgiSource("/glassplayerhost.cgi",
-			    GLASSPLAYERHOST_CGI_DIR+"/glassplayerhost.cgi");
+			    GLASSPLAYERHOST_CGI_DIR+"/glassplayerhost.cgi",
+			    "GlassPlayer");
 
   host_server->addStaticSource("/glassplayer.js","application/javascript",
-			       GLASSPLAYERHOST_SCRIPT_DIR+"/glassplayer.js");
+			       GLASSPLAYERHOST_SCRIPT_DIR+"/glassplayer.js",
+			       "GlassPlayer");
   host_server->addStaticSource("/ipsystem.js","application/javascript",
-			       GLASSPLAYERHOST_SCRIPT_DIR+"/ipsystem.js");
+			       GLASSPLAYERHOST_SCRIPT_DIR+"/ipsystem.js",
+			       "GlassPlayer");
   host_server->addStaticSource("/navbar.js","application/javascript",
-			       GLASSPLAYERHOST_SCRIPT_DIR+"/navbar.js");
+			       GLASSPLAYERHOST_SCRIPT_DIR+"/navbar.js",
+			       "GlassPlayer");
   host_server->addStaticSource("/player.js","application/javascript",
-			       GLASSPLAYERHOST_SCRIPT_DIR+"/player.js");
+			       GLASSPLAYERHOST_SCRIPT_DIR+"/player.js",
+			       "GlassPlayer");
   host_server->addStaticSource("/refresh.js","application/javascript",
-			       GLASSPLAYERHOST_SCRIPT_DIR+"/refresh.js");
+			       GLASSPLAYERHOST_SCRIPT_DIR+"/refresh.js",
+			       "GlassPlayer");
   host_server->addStaticSource("/stats.js","application/javascript",
-			       GLASSPLAYERHOST_SCRIPT_DIR+"/stats.js");
+			       GLASSPLAYERHOST_SCRIPT_DIR+"/stats.js",
+			       "GlassPlayer");
   host_server->addStaticSource("/utils.js","application/javascript",
-			       GLASSPLAYERHOST_SCRIPT_DIR+"/utils.js");
+			       GLASSPLAYERHOST_SCRIPT_DIR+"/utils.js",
+			       "GlassPlayer");
   host_server->addStaticSource("/logo.png","image/png",
-			       GLASSPLAYERHOST_SCRIPT_DIR+"/logo.png");
+			       GLASSPLAYERHOST_SCRIPT_DIR+"/logo.png",
+			       "GlassPlayer");
   host_server->addStaticSource("/stats.html","text/html",
-			       GLASSPLAYERHOST_SCRIPT_DIR+"/stats.html");
+			       GLASSPLAYERHOST_SCRIPT_DIR+"/stats.html",
+			       "GlassPlayer");
   host_server->addStaticSource("/metadata.html","text/html",
-			       GLASSPLAYERHOST_SCRIPT_DIR+"/metadata.html");
+			       GLASSPLAYERHOST_SCRIPT_DIR+"/metadata.html",
+			       "GlassPlayer");
 
   //
   // Configure Signals
   //
+  ::signal(SIGHUP,SigHandler);
   ::signal(SIGINT,SigHandler);
   ::signal(SIGTERM,SigHandler);
 
@@ -208,6 +227,10 @@ void MainObject::restartData()
 
 void MainObject::exitData()
 {
+  if(global_reload) {
+    host_server->loadUsers(GLASSPLAYERHOST_USER_FILE);
+    global_reload=false;
+  }
   if(global_exiting) {
     if(host_player_process==NULL) {
       exit(0);
